<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzul"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        android:id="@+id/my_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        />

    <TextView
        android:id="@+id/textView_userName"
        style="@style/TextView"
        layout_alignParentTop="20dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/textView_nombre"
        style="@style/TextView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_userName" />

    <TextView
        android:id="@+id/textView_userEmail"
        style="@style/TextView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nombre" />

    <TextView
        android:id="@+id/textView_ciudad"
        style="@style/TextView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/ciudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_userEmail" />

    <TextView
        android:id="@+id/textView_codigoPostal"
        style="@style/TextView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/codigo_postal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ciudad" />

    <Button
        android:id="@+id/button"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/btn_regresar"
        android:onClick="regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_codigoPostal" />
</androidx.constraintlayout.widget.ConstraintLayout>